# NT-CENTER-INVEST

./: README.md  credit_data.txt  docker-compose.yml  train_data.json
backend/: .env  .env-non-dev  Dockerfile  learn.py  pyproject.toml  requirements.txt
backend/docker/: app.sh
backend/migrations/: env.py
backend/src/: config.py  constants.py  crud.py  database.py  dataset_without_links.csv  form-data.py  main.py  users.py  utils.py  voiceover.py
backend/src/crediting/: processing_model.py  router.py
backend/src/reference/: create.py  models.py
backend/src/reqs/: models.py  neero.py  noise.py  router.py  schemas.py
backend/src/user/: models.py  router.py  schemas.py
mobile_app/: settings.gradle
mobile_app/app/: build.gradle
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/com/example/mobile_app/: AudioRecorder.kt  AudioUploader.kt  CurrentDate.kt  MainActivity.kt  RecognizerUiState.kt  SpeechRecognizerContract.kt  TestRecognizerModel.kt
mobile_app/app/src/main/java/com/example/mobile_app/navigate/: AppNavigation.kt  NavItems.kt  Screens.kt
mobile_app/app/src/main/java/com/example/mobile_app/screens/: Chat.kt  ChatTime.kt  Test.kt  TestRecognizer.kt  VoiceMessage.kt
mobile_app/app/src/main/java/com/example/mobile_app/ui/theme/: Theme.kt
mobile_app/gradle/wrapper/: gradle-wrapper.properties
